Mon Aug 28 09:05:20 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * bin/ace_tests.lst:

          Copied test exclusion list from the Multicast_Test entry.

        * protocols/tests/RMCast/Protocol.h:
        * protocols/tests/RMCast/run_test.pl:

          Adjusted the timeout value and message size.

Sun Aug 27 11:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added twoway DII collocation test

Sun Aug 27 00:03:07 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Filecache.cpp (ACE_Filecache_Object): Added a call to

          this->lock_.release ();

          to release the lock and so the same file can be fetched again.
          Thanks to Liu Qian <qianliu dot gmail at com> for reporting
          this.

Sat Aug 26 17:40:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-porting.html:
          ACE_VXWORKS is the define for VxWorks, exceptions are required
          for TAO.

Sat Aug 26 17:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-guidelines.html:
          Updated some parts to mention svn instead of cvs

Sat Aug 26 03:11:01 UTC 2006  Krishnakumar B  <kitty@spam.invalid.domain>

        * docs/svn/svn-prefs.reg:
        * docs/svn/config:

          Updates to add even more file types.

Sat Aug 26 02:32:18 UTC 2006  Krishnakumar B  <kitty@spam.invalid.domain>

        * docs/svn/svn-prefs.reg:
        * docs/svn/config:

          Updated these files to add more entries to the list of globally
          ignored extensions, and also to the list of file types which
          should have automatic properties set.  Also synced up the config and
          svn-prefs.reg file.

Fri Aug 25 22:01:38 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Sock_Connect.cpp (get_ip_interfaces, count_interfaces):
          Corrected to extract IPv6 information correctly from ioctl()-
          returned structures.
